* Add env property to control backup location paths.backup
* Only allow creating user comments if the User has read permission for the referenced item
* Upgrade log4j to 2.13.2
* You can now set log4j properties via your env.properties file
* You can now access env properties in log4j2.xml configuration files using syntax ${mango:property.name}

*Version 3.7.4*
* Improve work item failure logging
* Fix DWR bug in legacy UI where module was not being assigned to the DWR upon creation
* Fix bug in User JSON importer where new users could not be created
* Fix bug where publishing lifecycle events when runtime context was closed could cause problems

*Version 3.7.3*
* Fix bug in leagcy UI introduced in 3.7.0 where loading module UI resources was not working
* Fix bug in H2 conversion to version 199 that could corrupt the database if the upgrade failed

*Version 3.7.2*
* Fix bug in upgrade script for schema version 28, use case insensitive comparison for email addresses
* Fix invalid date encoding in the configuration import/export JSON

*Version 3.7.1*
* Fix bug in MySQL where system settings were not being saved
* Disable Quality of Service filter by default
* Disable Denial of Service filter by default
* Disable Low Resource Manager by default

*Version 3.7.0*
* Add organization field to User with limit of 80 chars
* Add organizationalRole field to User with limit of 80 chars
* Track created date/time of a User, all existing users will have a created date of the upgrade date
* Add ability to verify the email address for a User and track the date it was verified
* Add general use JSON object to all Users to store custom data
* IMPORTANT the User data column in the database is of type JSON for MySQL which is only supported in version 5.7.8 and above
* IMPORTANT Email addresses are now required to be unique across all users, ensure you have no duplicates before this upgrade otherwise duplicates will be modified and their username and id will be logged