@@ -3,38 +3,40 @@
  */
 package com.serotonin.util.properties;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.UncheckedIOException;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
 
+import org.apache.commons.text.StringSubstitutor;
+
 /**
- * <p>We can potentially replace the regex code with {@linkplain org.springframework.util.PropertyPlaceholderHelper} or
- * {@linkplain org.apache.commons.text.StringSubstitutor}.</p>
+ * Properties are loaded from the following sources in order:
+ * <ol>
+ *     <li>Java system properties</li>
+ *     <li>Environment variables</li>
+ *     <li>User supplied env.properties file</li>
+ *     <li>Mango built-in env.properties file</li>
+ * </ol>
  *
- * <p>Limitations of this class include:</p>
- * <ul>
- *   <li>No protection against infinite recursion when interpolating</li>
- *   <li>No way to specify default in interpolation expression</li>
- *   <li>No way escape interpolation expressions</li>
- * </ul>
+ * <p>
+ *     System properties must be prefixed with "mango." and environment variables must prefixed with "mango_" and
+ *     use an underscore in place of the dots.
+ * </p>
  *
- * <p>{@linkplain com.infiniteautomation.mango.spring.MangoPropertySource} is used to supply these properties to Spring.
+ * <p>{@link com.infiniteautomation.mango.spring.MangoPropertySource MangoPropertySource} is used to supply these properties to Spring.
  * Note: The Spring property resolver attempts interpolation again when getting properties from Environment.</p>
  *
  * @author Jared Wiltshire
  */
 public class DefaultMangoProperties implements MangoProperties {
 
+    private final Map<String, String> environment = MangoProperties.loadFromEnvironment();
+    private final StringSubstitutor interpolator = createInterpolator();
     private final Path envPropertiesPath;
     protected volatile Properties properties;
 
@@ -47,12 +49,13 @@ public class DefaultMangoProperties implements MangoProperties {
         // Load the environment properties
         Properties properties;
         try {
-            properties = DefaultMangoProperties.loadFromResources("env.properties");
+            properties = MangoProperties.loadFromResources("env.properties");
             if (Files.isReadable(envPropertiesPath)) {
                 try (Reader reader = Files.newBufferedReader(envPropertiesPath)) {
                     properties.load(reader);
                 }
             }
+            properties.putAll(environment);
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
@@ -64,26 +67,13 @@ public class DefaultMangoProperties implements MangoProperties {
     }
 
     @Override
-    public String getString(String key) {
-        String value = System.getProperty(key);
-        if (value == null) {
-            value = properties.getProperty(key);
-        }
-        return interpolateProperty(value);
+    public String getProperty(String key) {
+        return properties.getProperty(key);
     }
 
-    public static Properties loadFromResources(String resourceName) throws IOException {
-        return loadFromResources(resourceName, DefaultMangoProperties.class.getClassLoader());
+    @Override
+    public String interpolateProperty(String value) {
+        return interpolator.replace(value);
     }
 
-    public static Properties loadFromResources(String resourceName, ClassLoader cl) throws IOException {
-        Properties properties = new Properties();
-        ArrayList<URL> resources = Collections.list(cl.getResources(resourceName));
-        for (URL resource : resources) {
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.openStream(), StandardCharsets.UTF_8))) {
-                properties.load(reader);
-            }
-        }
-        return properties;
-    }
 }
